# GameOfLife-PP-Final

./: CMakeLists.txt  Glider.txt  Makefile  Puffer.txt  README.md  Spider.txt  all.txt  run.sh  test.cpp
include/: Benchmark.h  GLScene.h  Life_cuda.h  Life_mpi.h  Life_openmp.h  Life_pthread.h  Life_serial.h  World.h  World3d.h  World_cuda.h  World_mpi.h  World_openmp.h  World_pthread.h  World_serial.h
src/: Benchmark.cpp  CMakeLists.txt  GLScene.cpp  Life.cpp  Life.cu  Life3d.cpp  Life3d.cu  Life_cuda.cpp  Life_cuda.cu  Life_mpi.cpp  Life_openmp.cpp  Life_pthread.cpp  Life_serial.cpp  World.cpp  World3d.cpp  World_cuda.cpp  World_mpi.cpp  World_openmp.cpp  World_pthread.cpp  World_serial.cpp  main.cpp
